adicionando tela dois

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="verde_medio">#5DB069</color>
     <color name="verde">#E52F9E41</color>
     <color name="verde_claro">#C564B06E</color>
+    <color name="cinza_claro">#95E5EAE6</color>
 
 
 </resources>
