--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,20 +17,12 @@
 
         <Spinner
             android:id="@+id/classeCadSpinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:entries="@array/opcao" />
+            style="@style/spiner" />
 
     </LinearLayout>
 
     <ImageView
-       android:layout_marginTop="80dp"
-        android:layout_gravity="center"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:src="@drawable/ifmg3"
-
-        />
+       style="@style/imagem_principal"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -38,7 +30,8 @@
         android:orientation="horizontal">
 
         <EditText
-            style="@style/Edit_text1" />
+            android:id="@+id/login"
+            style="@style/Edit_text_login" />
 
     </LinearLayout>
 
@@ -46,34 +39,26 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <EditText
-            style="@style/Edit_text2" />
+            android:id="@+id/senha"
+            style="@style/Edit_text_senha" />
+
     </LinearLayout>
 
-
-
     <LinearLayout
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="75dp">
 
         <androidx.appcompat.widget.AppCompatButton
-            style="@style/btn" />
-
+            android:id="@+id/buttonEntrar"
+            style="@style/btnEntrar" />
 
     </LinearLayout>
 
     <ImageView
-        android:layout_marginTop="100dp"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/logo"
-
-        />
-
-
+        style="@style/imagem_logo" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
