--- a/app/src/main/res/drawable/backgraud_btn2.xml
+++ b/app/src/main/res/drawable/backgraud_btn2.xml
@@ -2,5 +2,5 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="15dp" />
-    <solid android:color="@color/cinza_claro"></solid>
+    <solid android:color="@color/verde_claro"></solid>
 </shape>
