--- a/app/src/main/res/drawable/backgraud_secundario.xml
+++ b/app/src/main/res/drawable/backgraud_secundario.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="15dp" />
     <gradient
         android:startColor="@color/white"
-        android:endColor="@color/cinza_claro"
-        android:angle="180"
+        android:endColor="@color/verde_medio"
+        android:angle="90"
         ></gradient>
+
 </shape>
