--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,25 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".LoginActivity"
     android:orientation="vertical"
-    android:background="@drawable/backgraud_principal">
+    android:background="@drawable/imgtela1">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:layout_marginLeft="250dp"
         android:orientation="horizontal">
 
         <Spinner
             android:id="@+id/classeCadSpinner"
-            style="@style/spiner" />
+            style="@style/spiner"
+            android:layout_width="match_parent" />
 
     </LinearLayout>
 
-    <ImageView
-       style="@style/imagem_principal"/>
-
     <LinearLayout
+        android:layout_marginTop="400dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -50,7 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="75dp">
+        android:layout_marginTop="10dp">
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/buttonEntrar"
@@ -58,7 +56,14 @@
 
     </LinearLayout>
 
-    <ImageView
-        style="@style/imagem_logo" />
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_marginTop="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="invisible"
+        android:indeterminateTint="@color/cinza_claro"
+        ></ProgressBar>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
