--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,6 +26,8 @@
         <item name="android:padding">15dp</item>
         <item name="android:hint">login</item>
         <item name="android:textColor">@color/cinza</item>
+        <item name="android:maxLength">10</item>
+        <item name="android:inputType">number</item>
     </style>
 
     <style name="Edit_text_senha">
@@ -39,6 +41,8 @@
         <item name="android:hint">senha</item>
         <item name="android:textColor">@color/cinza</item>
         <item name="android:drawableRight">@drawable/ico_olho</item>
+        <item name="android:maxLength">15</item>
+        <item name="android:inputType">numberPassword</item>
     </style>
 
     <style name="btnEntrar">
