config farebase and login auth

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,7 +28,7 @@
         android:orientation="horizontal">
 
         <EditText
-            android:id="@+id/login"
+            android:id="@+id/email"
             style="@style/Edit_text_login" />
 
     </LinearLayout>
