--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,10 +24,11 @@
         <item name="android:layout_marginRight">20dp</item>
         <item name="android:background">@drawable/backgraud_edit_text</item>
         <item name="android:padding">15dp</item>
-        <item name="android:hint">login</item>
+        <item name="android:hint">email</item>
         <item name="android:textColor">@color/cinza</item>
-        <item name="android:maxLength">10</item>
-        <item name="android:inputType">number</item>
+        <item name="android:drawableRight">@drawable/ico_email</item>
+        <item name="android:maxLength">40</item>
+        <item name="android:inputType">textEmailAddress</item>
     </style>
 
     <style name="Edit_text_senha">
@@ -42,7 +43,7 @@
         <item name="android:textColor">@color/cinza</item>
         <item name="android:drawableRight">@drawable/ico_olho</item>
         <item name="android:maxLength">15</item>
-        <item name="android:inputType">numberPassword</item>
+        <item name="android:inputType">textPassword</item>
     </style>
 
     <style name="btnEntrar">
